[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-chatbot-backend"
version = "0.1.0"
description = "Backend for Medical Chatbot using FastAPI and Gemini API"
readme = "README.md"
requires-python = ">=3.8, <3.13"
authors = [
    {name = "Compsci194"}
]

[project.dependencies]
fastapi = "0.104.1"
uvicorn = "0.23.2"
google-generativeai = ">=0.7.0"
python-dotenv = "1.0.0"
pydantic = "2.7.4"
httpx = "0.25.0"
python-multipart = "0.0.6" 